--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^7.4.1",
+    "sass": "^1.86.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -34,12 +35,7 @@
     "lint": "eslint .",
     "format": "prettier --write ."
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  
   "browserslist": {
     "production": [
       ">0.2%",
