--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.8.3",
+    "jest": "^29.7.0",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^7.4.1",
     "sass": "^1.86.2",
@@ -21,7 +23,8 @@
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-jest": "25.7.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
@@ -35,7 +38,6 @@
     "lint": "eslint .",
     "format": "prettier --write ."
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
